# CSE230_final_project_snake

./: README.md  snake.cabal
src/: Snake.hs  UI.hs  test.hs
