name:                snake
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable snake
  hs-source-dirs:      src
  other-modules:       Snake
                     , UI
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , mtl
                     , random
                     , transformers
                     , vty
                     , vty-unix
                     , text
                     , process
                     , proteaaudio
                     , bytestring 
                     , filepath

